manifests/color.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: color
  name: color
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: color
  labels:
    app: color
  namespace: color
spec:
  replicas: 4
  selector:
    matchLabels:
      app: color
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: color
    spec:
      containers:
      - name: color
        image: :latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
            requests:
              cpu: 0.25
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: color
  namespace: color
spec:
  type: ClusterIP
  selector:
    app: color
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color
  namespace: color
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: 
spec:
  ingressClassName: alb
  rules:
  - host: 
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: color
            port:
              number: 80
